# unity-ai-platform-clean

./: .env.BinaryData  .env.Deployment  .env.common  .env.database  .env.endpoints  .env.executions  .env.fastapi  .env.nodes  .env.queue  .env.secrets.example  .env.security  .env.sourcecontrol  .env.taskrunners  .env.timezone  .env.usermanagement  .env.workflows  .gitignore  .pre-commit-config.yaml  .production  Dockerfile  GIT-SETUP.md  Makefile  ONE-CLICK-SETUP.md  README-SWARM.md  README.md  TEMPLATE-CONFIG-GUIDE.md  TESTING_GUIDE.md  backup-config.ps1  create-secrets.ps1  create-secrets.sh  deploy-configured.ps1  deploy-swarm.ps1  deploy-swarm.sh  docker-compose-simple.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-secrets-setup.md  generate_envs.py  generate_envs.sh  (+11 more)
.github/workflows/: ci.yml
compose/: docker-compose.prod.yml  docker-compose.swarm.yml  docker-compose.yml
config/: .env.example  README.md  production-config-template.env
docs/: CONFIGURATION-TEMPLATE.md  DEPLOYMENT-GUIDE.md  DOCKER_SWARM.md  PRODUCTION-DEPLOYMENT.md  PROJECT-COMPLETION-CHECKLIST.md  PROJECT-OVERVIEW.md  README.md  SECURITY.md  additional_Context_Server.md  architecture-mermaid.md  architecture-plantuml.puml  architecture-simple.md  check.md  code-testing-integration.md  communication-protocol.md  n8n-api-playground-integration.md
fastapi/: Dockerfile  README.md  app.py  main.py  requirements.txt
frontend/: .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: ConnectionStatus.tsx  Layout.tsx
frontend/src/contexts/: ApiContext.tsx
frontend/src/pages/: Credentials.tsx  Dashboard.tsx  ExecutionDetail.tsx  Executions.tsx  Settings.tsx  WorkflowDetail.tsx  Workflows.tsx
grafana/dashboards/: unityai-overview.json
grafana/datasources/: prometheus.yml
n8n/: Dockerfile  Dockerfile.save  README.md  basic-test.ps1  docker-compose.yml  quick-test.ps1  simple-test.ps1  test-individual-services.ps1  test-services.ps1  test-services.sh
n8n-playground/: .env.example  Dockerfile  Dockerfile.dev  README-FULL-STACK.md  README.md  config.py  debug_middleware.py  debug_middleware2.py  debug_middleware3.py  debug_middleware4.py  docker-compose.dev.yml  docker-compose.full-stack.yml  execute_workflow_example.py  fix_middleware.py  list_workflows.py  main.py  openapi_spec.json  pytest.ini  requirements-dev.txt  requirements.txt  start-full-stack.ps1  stop-full-stack.ps1  test_minimal_fastapi.py
n8n-playground/core/: __init__.py  api_client.py  config.py  playground_manager.py  response_handler.py  workflow_executor.py
n8n-playground/database/init/: 01-create-n8n-db.sql
n8n-playground/docs/: n8n_integration_guide.md
n8n-playground/examples/: n8n_integration_example.py
n8n-playground/modules/fastapi_integration/: SYSTEM_INSTRUCTIONS.md
n8n-playground/modules/monitoring/: SYSTEM_INSTRUCTIONS.md
n8n-playground/modules/user_management/: SYSTEM_INSTRUCTIONS.md
n8n-playground/modules/workflow_automation/: SYSTEM_INSTRUCTIONS.md  __init__.py  api.py  models.py  n8n_api_endpoints.py  n8n_integration.py  template_engine.py  validators.py  workflow_manager.py
n8n-playground/monitoring/prometheus/: prometheus.yml
n8n-playground/monitoring/prometheus/rules/: alerts.yml
n8n-playground/tests/: __init__.py  conftest.py
n8n-playground/tests/test_core/: __init__.py  test_api_client.py
n8n-playground/tests/test_modules/: __init__.py
n8n-playground/tests/test_modules/test_workflow_automation/: __init__.py  test_api.py  test_executor.py  test_models.py  test_response_handler.py  test_template_engine.py  test_validator.py  test_workflow_manager.py
n8n/monitoring/: prometheus.yml
python/: Dockerfile  README.md  requirements.txt
python/scripts/: data_analysis.py  ml_inference.py  web_scraper.py
python/src/: config.py  main.py  services.py  utils.py
scripts/: DEBUG-README.md  README-INTERACTIVE-SETUP.md  README-SETUP.md  README.md  debug-server.ps1  debug-server.sh  deploy-production.sh  deploy-swarm.sh  deploy-with-config.ps1  export-dev.sh  import-prod.sh  one-click-production.ps1  quick-debug.sh  setup-docker-secrets.sh  setup-env.ps1  setup-interactive-config.ps1  setup-production.sh  setup-server-complete.sh  setup-server.ps1  setup-server.sh  test-complete-stack.ps1  worker_example.py
shared/libs/: common.py  config.py
shared/scripts/: README.md
shared/scripts/api_integration/: api_client.py  requirements.txt
shared/scripts/data_processing/: analyze_data.py  requirements.txt
shared/scripts/document_processing/: process_documents.py  requirements.txt
shared/scripts/image_processing/: process_images.py  requirements.txt
shared/scripts/ml_inference/: requirements.txt  text_analysis.py
shared/scripts/notifications/: requirements.txt  send_notification.py
shared/scripts/web_scraping/: requirements.txt  scrape_website.py
src/api/: dependencies.py  main.py  middleware.py
src/api/routers/: __init__.py  autogen.py  code_execution.py  health.py  n8n.py  workflows.py
src/config/: logging.yaml
src/core/: cache.py  config.py  database.py  exceptions.py  logging.py  models.py
src/services/: autogen_service.py  code_execution_service.py  n8n_service.py  workflow_service.py
tests/: __init__.py  conftest.py
tests/test_api/: test_health.py
traefik/: dynamic.yml  traefik.yml
